force-app/main/default/objects/Calendar_Event__c/Calendar_Event__c.object-meta.xml
<CustomObject>
    <description>Maps to Calendar Events in Clio Manage.</description>
    <label>Calendar Event</label>
    <nameField>
        <label>Calendar Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendar Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>