force-app/main/default/objects/Calendar_Event__c/fields/Assigned_To_Clio_ID__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Clio_ID__c</fullName>
    <formula>Assigned_To__r.Clio_User_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To Clio ID</label>
    <type>Text</type>
</CustomField>