force-app/main/default/objects/Calendar_Event__c/fields/Clio_Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Clio_Calendar_Id__c</fullName>
    <formula>Assigned_To__r.Clio_Calendar_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clio Calendar Id</label>
    <type>Text</type>
</CustomField>