force-app/main/default/objects/Calendar_Event__c/fields/Clio_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Clio_Company_ID__c</fullName>
    <formula>Lead__r.Clio_Company_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clio Company ID</label>
    <type>Text</type>
</CustomField>