force-app/main/default/objects/Calendar_Event__c/fields/Clio_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Clio_Event_ID__c</fullName>
    <externalId>true</externalId>
    <label>Clio Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>