force-app/main/default/objects/Calendar_Event__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field can store multiple lines of text and maps to the Description field of calendar entries.</description>
    <label>Description</label>
    <length>64000</length>
    <type>LongTextArea</type>
</CustomField>