force-app/main/default/objects/Calendar_Event__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>This field can store a line of text and maps to the Location field of calendar entries.</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>