force-app/main/default/objects/Calendar_Event__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A Matter can have multiple Calendar Events associated with it, representing a one-to-many relationship. Important dates and appointments relevant to a legal case (Matter), such as court hearings, filing deadlines, client meetings, and other significant events, are recorded as Calendar Events and directly linked to the specific Matter they pertain to. This relationship is critical for effective case management, ensuring that all relevant events are tracked, scheduled, and clearly associated with the correct legal case. Managing the various deadlines and appointments is a cornerstone of legal practice, and these crucial dates must be organized and easily accessible within the context of each specific case.</description>
    <label>Matter</label>
    <referenceTo>Matter__c</referenceTo>
    <relationshipLabel>Calendar Events</relationshipLabel>
    <relationshipName>Calendar_Events</relationshipName>
    <type>Lookup</type>
</CustomField>